# DorkyDataDivas

./: .gitignore  __main__.py  log.md  pyproject.toml  readme.md
examples/: greedy.py  multiplayer.md
src/: __main__.py  combiner.py
src/algo/: greedy.py  lazy.py
src/assets/: git_path_setter.py
src/core/: sounds.py  wordsearch.py
src/gemini/: ai.py  gemini_word_model.py  message_part_testing.py  start.py
src/util/: colors.py
test/greedy/: greedy_algo_test.py
util/: colors.py
