[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generative-word-search"
version = "0.1.0"
description = "An example package"
# authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "gitpython",
    "pygame",
    "word-search-generator",
    "google-generativeai",
    "PyQt5",
]

# [project]
# name = "generative-word-search"
# version = "0.1.0"
# description = "a generative word search puzzle generator"

# # [build-system]
# # build-backend = "flit_core.buildapi"
# # requires = ["flit_core >=3.2,<4"]